version/1.0.0a0/_sources/api/ansys/tools/visualization_interface/plotter/Plotter.rst.txt






:class:`Plotter`
================


.. py:class:: ansys.tools.visualization_interface.plotter.Plotter(backend: ansys.tools.visualization_interface.backends._base.BaseBackend = None)

   
   Base plotting class containing common methods and attributes.

   This class is responsible for plotting objects using the specified backend.

   :Parameters:

       **backend** : :obj:`BaseBackend`, :obj:`optional`
           Plotting backend to use, by default PyVistaBackend.














   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Plotter

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~plot_iter`
            - Plots multiple objects using the specified backend.
          * - :py:attr:`~plot`
            - Plots an object using the specified backend.
          * - :py:attr:`~show`
            - Show the plotted objects.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~backend`
            - Return the base plotter object.







Import detail
-------------

.. code-block:: python

    from ansys.tools.visualization_interface.plotter import Plotter

Property detail
---------------

.. py:property:: backend

   
   Return the base plotter object.
















   ..
       !! processed by numpydoc !!




Method detail
-------------

.. py:method:: plot_iter(plotting_list: List, **plotting_options)

   
   Plots multiple objects using the specified backend.


   :Parameters:

       **plotting_list** : :obj:`List`
           List of objects to plot.

       **plotting_options** : :class:`python:dict`
           Additional plotting options.














   ..
       !! processed by numpydoc !!

.. py:method:: plot(plottable_object: Any, **plotting_options)

   
   Plots an object using the specified backend.


   :Parameters:

       **plottable_object** : :obj:`Any`
           Object to plot.

       **plotting_options** : :class:`python:dict`
           Additional plotting options.














   ..
       !! processed by numpydoc !!

.. py:method:: show(plottable_object: Any = None, screenshot: str = None, name_filter: bool = None, **kwargs) -> List

   
   Show the plotted objects.


   :Parameters:

       **plottable_object** : :obj:`Any`, :obj:`optional`
           Object to show, by default None.

       **screenshot** : :class:`python:str`, :obj:`optional`
           Path to save a screenshot, by default None.

       **name_filter** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           Flag to filter the object, by default None.

       **kwargs** : :class:`python:dict`
           Additional options the selected backend accepts.



   :Returns:

       :obj:`List`
           List of picked objects.











   ..
       !! processed by numpydoc !!




